# taso-api

./: .env.example  .gitignore  .pr_body.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  example.env  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: a6863f7aec9a_add_imagesnapshot_and_userimagealert_.py  a77989368d5e_add_cubanomicrate_table.py  a980a08ecd3a_initial_migration_create_rate_snapshots_.py  b123456789ab_add_bot_stats_tables.py  b47e6acb1437_add_local_history_snapshot_table.py
docs/: CONTINUITY.md  PROGRESS.md
docs/plans/: 2026-03-21-taso-api-fase1.md
scripts/: test_scrapers_manual.py
src/: __init__.py  config.py  database.py  main.py  redis_client.py
src/middleware/: auth.py
src/models/: __init__.py  bot_stats.py  image_alert.py  image_snapshot.py  rate_snapshot.py  rates.py  scheduler_status.py
src/routers/: __init__.py  admin.py  images.py  rates.py  stats.py
src/schemas/: __init__.py  admin.py  history.py  image.py  rates.py  stats.py
src/scrapers/: __init__.py  bcc.py  binance.py  cadeca.py  cubanomic.py  eltoque.py  images.py
src/services/: __init__.py  image_alert_service.py  image_capture.py  rates_service.py  scheduler.py  stats_service.py
tests/: conftest.py  test_config.py  test_image_alerts.py  test_image_alerts_endpoints.py  test_image_capture.py  test_main.py  test_models.py
tests/integration/: test_cubanomic_history_integration.py  test_resilient_fallback.py
tests/test_middleware/: __init__.py  test_auth.py
tests/test_routers/: __init__.py  test_admin.py  (+3 more)
(+9 files in other folders)
